# tSFM

./: .gitignore  .travis.yml  INSTALL  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  setup.py
CfasciculataCfCl/IDlogo/: --_HOMO.eps  -_CfasciculataCfCl.eps  -_HOMO.eps  AA_CfasciculataCfCl.eps  AC_CfasciculataCfCl.eps  AU_CfasciculataCfCl.eps  AU_HOMO.eps  A_CfasciculataCfCl.eps  A_HOMO.eps  CA_CfasciculataCfCl.eps  CA_HOMO.eps  CG_CfasciculataCfCl.eps  CG_HOMO.eps  C_CfasciculataCfCl.eps  C_HOMO.eps  GA_CfasciculataCfCl.eps  GA_HOMO.eps  GC_CfasciculataCfCl.eps  GC_HOMO.eps  GG_HOMO.eps  GU_CfasciculataCfCl.eps  GU_HOMO.eps  G_CfasciculataCfCl.eps  G_HOMO.eps  HOMO_results.txt  UA_CfasciculataCfCl.eps  UA_HOMO.eps  UC_CfasciculataCfCl.eps  UC_HOMO.eps  UG_CfasciculataCfCl.eps  UG_HOMO.eps  UU_CfasciculataCfCl.eps  UU_HOMO.eps  U_CfasciculataCfCl.eps  U_HOMO.eps
CfasciculataCfCl/KLD_epsilon/: -_CfasciculataCfCl.eps  -_HOMO.eps  AA_CfasciculataCfCl.eps  AA_HOMO.eps  AC_CfasciculataCfCl.eps  AC_HOMO.eps  AU_CfasciculataCfCl.eps  (+31 more)
Kelly2020_data/: tRNA_L_skel_Leish.sites74.struct.cove
bplogofuntest/: bplogofuntest.py  nsb_entropy.py  seq.py
bplogofuntest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: Installation.rst  Introduction.rst  Makefile  MolecularInformation.rst  Tutorial.rst  conf.py  index.rst  references.bib  requirements.txt
src/: exact.c  exact.pyx
tests/: conftest.py  test_sample.py
tsfm/: MolecularInformation.py  ecdfgof.py  exact.py  seq.py  test  tsfm.py  vect.py
(+358 files in other folders)
